[package]
name = "photo-viewer"
version = "0.1.0"
edition = "2021"

[lib]
name = "photo_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
trash = "3"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Graphics_Imaging",
    "Win32_UI_Shell",
] }
